Minor change in the code

--- a/countingBottles.ipynb
+++ b/countingBottles.ipynb
@@ -2,30 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 357,
    "id": "51287d84",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 358,
    "id": "52023a9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread(\"images/bottle_crate_24.png\",cv2.IMREAD_COLOR)\n",
-    "img = cv2.medianBlur(img,7)\n",
+    "img = cv2.imread(\"images/bottle_crate_07.png\",cv2.IMREAD_COLOR)\n",
+    "img = cv2.medianBlur(img,5)\n",
     "img2 = cv2.medianBlur(img,13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 359,
    "id": "323f87d6",
    "metadata": {},
    "outputs": [],
@@ -36,31 +37,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 360,
    "id": "2fb2ad7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "normal_bottles= cv2.HoughCircles(gray,cv2.HOUGH_GRADIENT,1,40\n",
     "                                    ,param1 = 32\n",
-    "                                    ,param2=30,minRadius =1, maxRadius =25)"
+    "                                    ,param2=30,minRadius =1, maxRadius =26)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 361,
    "id": "8fc8f327",
    "metadata": {},
    "outputs": [],
    "source": [
     "flip_bottles =cv2.HoughCircles(gray2,cv2.HOUGH_GRADIENT,1,40\n",
     "                                    ,param1 = 32\n",
-    "                                    ,param2=30,minRadius =30, maxRadius =35)"
+    "                                    ,param2=30,minRadius =30, maxRadius =38)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 362,
    "id": "6f78da70",
    "metadata": {},
    "outputs": [],
@@ -80,10 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 363,
    "id": "20bc8d28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 363,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_flipped_bottles = 0\n",
     "if flip_bottles is not None:\n",
@@ -95,7 +107,7 @@
     "        num_flipped_bottles =num_flipped_bottles +1\n",
     "else: \n",
     "    num_flipped_bottles  = 0\n",
-    "cv2.imshow(\"Detected Circle\", img)\n",
+    "cv2.imshow(\"Detected Bottles\", img)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()\n",
     "num_bottles = num_bottles+num_flipped_bottles\n",
@@ -105,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7418d9",
+   "id": "8422ce8e",
    "metadata": {},
    "outputs": [],
    "source": []
