Adding text on the image

--- a/countingBottles.ipynb
+++ b/countingBottles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 86,
    "id": "51287d84",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 95,
    "id": "52023a9f",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 96,
    "id": "323f87d6",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 97,
    "id": "2fb2ad7f",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 98,
    "id": "8fc8f327",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 99,
    "id": "6f78da70",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 100,
    "id": "20bc8d28",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "20"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,17 +107,43 @@
     "        num_flipped_bottles =num_flipped_bottles +1\n",
     "else: \n",
     "    num_flipped_bottles  = 0\n",
-    "cv2.imshow(\"Detected Bottles\", img)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
+    "\n",
     "num_bottles = num_bottles+num_flipped_bottles\n",
     "num_bottles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
+   "id": "b0fc6ef4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "font_scale = 1\n",
+    "org = (200,50)\n",
+    "color = (255,255,255)\n",
+    "text = '# bottles = '+str(num_bottles)\n",
+    "img = cv2.putText(img, text, org, font, \n",
+    "                   font_scale, color, 5, cv2.LINE_AA)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "id": "8422ce8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow(\"Detected Bottles\", img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7290d2f0",
    "metadata": {},
    "outputs": [],
    "source": []
